--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jquery": "^3.6.0",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
