--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.1.0",
+    "@angular/animations": "^14.1.3",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
@@ -34,6 +34,7 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^9.0.0",
     "ngx-pagination": "^6.0.2",
+    "ngx-toastr": "^15.0.0",
     "pusher-js": "^7.4.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
