--- a/angular.json
+++ b/angular.json
@@ -25,16 +25,16 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.rtl.min.css",
-
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
               "src/styles.css"
-            
+
 
             ],
             "scripts": [
-              
+
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-            
-              
+
+
 
             ]
           },
